--- a/static/css/components/generic-dropper.css
+++ b/static/css/components/generic-dropper.css
@@ -92,6 +92,11 @@
   text-overflow: ellipsis;
 }
 
+.generic-dropper__primary .book-progress-btn:disabled {
+  cursor: default;
+  opacity: 1; /* For the disabled state to avoid flickering. */
+}
+
 /* Unified Read Button Styling */
 .cta-dropper {
   display: flex;
